fixed z-index

--- a/css/main.scss
+++ b/css/main.scss
@@ -83,14 +83,14 @@ header a {
 
 
 #container {
-  background-image: url('../img/b2.jpg');
+ background-image: url('../img/b2.jpg');
   background-size: cover;
   background-position: center center;
   position: relative;
   top: 0;
   bottom: 0;
   height: 100vh;
-  z-index: -10;
+  //z-index: -10;
   padding: 10px;
   flex: auto;
 }
